Updated dependencies  to latest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -15,17 +19,45 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "*": ["/*"],
-      "components/*": ["components/*"],
-      "lib/*": ["lib/*"],
-      "data/*": ["data/*"],
-      "pages/*": ["pages/*"],
-      "posts/*": ["posts/*"],
-      "config/*": ["config/*"],
-      "interfaces/*": ["interfaces/*"],
-      "public/*": ["public/*"],
-    }
+      "*": [
+        "/*"
+      ],
+      "components/*": [
+        "components/*"
+      ],
+      "lib/*": [
+        "lib/*"
+      ],
+      "data/*": [
+        "data/*"
+      ],
+      "pages/*": [
+        "pages/*"
+      ],
+      "posts/*": [
+        "posts/*"
+      ],
+      "config/*": [
+        "config/*"
+      ],
+      "interfaces/*": [
+        "interfaces/*"
+      ],
+      "public/*": [
+        "public/*"
+      ]
+    },
+    "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx", "pages/blog/[slug].tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/blog/[slug].tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
